--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
         </ul>
     </div>
 </div>
+<hr>
+<h2>Assignments</h2>
+<ul>
+  <li><a href="converter.html">Converter</a></li>
+  <li><a href="grade.html">Grading</a></li>
+  <li><a href="change.html">Change</a></li>
+  <li><a href="geolocation.html">Geolocation</a></li>
+</ul>
+
 
 </body>
 </html>
