--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -73,15 +72,19 @@
         </ul>
     </div>
 </div>
-<hr>
-<h2>Assignments</h2>
-<ul>
-  <li><a href="converter.html">Converter</a></li>
-  <li><a href="grade.html">Grading</a></li>
-  <li><a href="change.html">Change</a></li>
-  <li><a href="geolocation.html">Geolocation</a></li>
-</ul>
 
+<hr>
+
+<!-- Navigation -->
+<nav>
+  <h2>Assignments</h2>
+  <ul>
+    <li><a href="converter.html">Converter</a></li>
+    <li><a href="grade.html">Grading</a></li>
+    <li><a href="change.html">Change</a></li>
+    <li><a href="geolocation.html">Geolocation</a></li>
+  </ul>
+</nav>
 
 </body>
 </html>
